# cpp-niit

./: .gitignore  CMakeLists.txt
slides/01/io/: main.cpp
slides/01/new-delete/: main.cpp
slides/01/refs/: main.cpp
slides/01/string/: main.cpp
slides/01/swap/: main.cpp
slides/08/: exceptions.cpp
slides/09/: cast_namespace.cpp  privacy.cpp
tasks/01/00_vector/: main.cpp  vector.cpp  vector.h
tasks/01/05_mystring/: mystring.cpp  mystring.h  test.cpp
tasks/01/06_date/: 0106.cpp  MyDate.cpp  MyDate.h
tasks/01/quad/: main.cpp
tasks/04/employee/: 0401.cpp  Employee.cpp  Employee.h  Manager.cpp  Manager.h  Supervisor.cpp  Supervisor.h
